kclvm/tools/src/LSP/src/snapshots/kcl_language_server__find_refs__tests__find_refs_schema_arg_1_test.snap
---
source: tools/src/LSP/src/find_refs.rs
expression: "format!(\"{}\", { fmt_resp(& res) })"
---
None
