kclvm/tools/src/LSP/src/snapshots/kcl_language_server__find_refs__tests__find_refs_schema_arg_test.snap
---
source: tools/src/LSP/src/find_refs.rs
expression: "format!(\"{}\", { fmt_resp(& res) })"
---
path: "src/test_data/find_refs_test/main.k", range: Range { start: Position { line: 16, character: 14 }, end: Position { line: 16, character: 19 } }
path: "src/test_data/find_refs_test/main.k", range: Range { start: Position { line: 17, character: 13 }, end: Position { line: 17, character: 18 } }
