kclvm/tools/src/LSP/src/snapshots/kcl_language_server__find_refs__tests__find_refs_schema_attr_ref_test.snap
---
source: tools/src/LSP/src/find_refs.rs
expression: "format!(\"{}\", { fmt_resp(& res) })"
---
path: "src/test_data/find_refs_test/main.k", range: Range { start: Position { line: 5, character: 4 }, end: Position { line: 5, character: 8 } }
path: "src/test_data/find_refs_test/main.k", range: Range { start: Position { line: 12, character: 8 }, end: Position { line: 12, character: 12 } }
