kclvm/tools/src/LSP/src/snapshots/kcl_language_server__find_refs__tests__find_refs_variable_ref_test.snap
---
source: tools/src/LSP/src/find_refs.rs
expression: "format!(\"{}\", { fmt_resp(& res) })"
---
path: "src/test_data/find_refs_test/main.k", range: Range { start: Position { line: 0, character: 0 }, end: Position { line: 0, character: 1 } }
path: "src/test_data/find_refs_test/main.k", range: Range { start: Position { line: 1, character: 4 }, end: Position { line: 1, character: 5 } }
path: "src/test_data/find_refs_test/main.k", range: Range { start: Position { line: 2, character: 4 }, end: Position { line: 2, character: 5 } }
path: "src/test_data/find_refs_test/main.k", range: Range { start: Position { line: 12, character: 14 }, end: Position { line: 12, character: 15 } }
